# nemolib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: display.hpp  geometry.hpp  loop.hpp  nemolib.hpp  window.hpp
src/: gui.cpp  guigl.cpp  loop.cpp  window.cpp  windowgl.cpp
